infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # tells the ingress controller that we are going to feed it some routing rules.
    kubernetes.io/ingress.class: nginx
    # to use regex
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    # made up domain name
    - host: www.ticketing-prod.me
      http:
        # paths to our different services 
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/tickets?(.*)
            pathType: Prefix
            backend: 
              service: 
                name: tickets-srv
                port:
                  number: 3000
          - path: /api/orders?(.*)
            pathType: Prefix
            backend: 
              service: 
                name: orders-srv
                port:
                  number: 3000
          - path: /api/payments?(.*)
            pathType: Prefix
            backend: 
              service: 
                name: payments-srv
                port:
                  number: 3000
          # client service must be last
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
